--- a/package.json
+++ b/package.json
@@ -21,11 +21,23 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "express": "*",
-    "mongoose": "*"
+    "less": "^2.6.0",
+    "mongoose": "*",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "autoprefixer-loader": "*",
     "babel": "5.x",
     "babel-loader": "5.*",
+    "css-loader": "^0.22.0",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "less-loader": "^2.2.2",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack-dev-server": "^1.14.1",
     "webpack": "^3.4.1"
   }
 }
