--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Notes SPA with ReactJS + Webpack + Express.js + MongoDB",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --inline --hot",
+    "start-server": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0",
     "server": "babel-node server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,15 +29,18 @@
   "devDependencies": {
     "autoprefixer-loader": "*",
     "babel": "5.x",
-    "babel-loader": "5.*",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^5.4.2",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.22.0",
     "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.2",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack-dev-server": "^1.14.1",
-    "webpack": "^3.4.1"
+    "webpack": "2.3.3",
+    "webpack-dev-server": "^1.14.1"
   }
 }
