--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Notes SPA with ReactJS + Webpack + Express.js + MongoDB",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack",
+    "build": "webpack",
     "start-server": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0",
     "server": "babel-node server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -38,6 +38,8 @@
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.2",
+    "pug": "^2.0.0-rc.3",
+    "pug-loader": "^2.3.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
