--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Notes SPA with ReactJS + Webpack + Express.js + MongoDB",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack",
-    "start-server": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0",
+    "build": "webpack --env production",
+    "start-server": "webpack-dev-server --debug --hot --devtool --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0 --env development",
     "server": "babel-node server/app.js",
+    "serv-static": "static public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -38,6 +39,7 @@
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.2",
+    "node-static": "^0.7.9",
     "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
     "react-hot-loader": "^1.3.0",
