--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.2",
+    "node-sass": "^4.5.3",
     "node-static": "^0.7.9",
     "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
     "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.13.2",
     "url-loader": "^0.5.6",
     "webpack": "2.3.3",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^4.1.0"
   }
 }
