--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^5.4.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.22.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
