--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "webpack --env production",
-    "start-server": "webpack-dev-server --debug --hot --devtool --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0 --env development",
+    "start-server": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0 --env development",
     "server": "babel-node server/app.js",
     "serv-static": "static public",
     "test": "echo \"Error: no test specified\" && exit 1"
