--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/AlexLazareva/notes-app#readme",
   "dependencies": {
     "body-parser": "^1.12.3",
+    "classnames": "^2.2.5",
     "express": "*",
     "less": "^2.6.0",
     "mongoose": "*",
