--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/AlexLazareva/notes-app#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.12.3",
     "classnames": "^2.2.5",
     "express": "*",
+    "flux": "^3.1.3",
     "less": "^2.6.0",
     "mongoose": "*",
     "react": "^15.6.1",
