--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.5",
     "express": "*",
     "flux": "^3.1.3",
+    "keymirror": "^0.1.1",
     "less": "^2.6.0",
     "mongoose": "*",
     "react": "^15.6.1",
