--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.12.3",
     "classnames": "^2.2.5",
+    "events": "^1.1.1",
     "express": "*",
     "flux": "^3.1.3",
     "keymirror": "^0.1.1",
