--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "less": "^2.6.0",
     "mongoose": "*",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-masonry-component": "^5.0.7"
   },
   "devDependencies": {
     "autoprefixer-loader": "*",
