--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   "homepage": "https://github.com/AlexLazareva/notes-app#readme",
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^5.4.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.12.3",
     "classnames": "^2.2.5",
     "cors": "^2.8.4",
@@ -41,15 +46,20 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^5.4.2",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.1",
     "css-loader": "^0.22.0",
+    "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.30.1",
+    "jsdom": "^11.1.0",
     "json-loader": "^0.5.4",
+    "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "node-static": "^0.7.9",
     "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
+    "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.2",
