--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "keymirror": "^0.1.1",
     "less": "^2.6.0",
     "mongoose": "*",
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-masonry-component": "^5.0.7"
