--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^5.4.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.22.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.5",
