--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack-dev-server --debug --hot --devtool --output-pathinfo --watch --colors --host 0.0.0.0 --env development",
     "server": "babel-node server/app.js",
     "serv-static": "static public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "events": "^1.1.1",
     "express": "*",
     "flux": "^3.1.3",
+    "immutable": "^3.8.1",
     "keymirror": "^0.1.1",
     "less": "^2.6.0",
     "mongoose": "*",
@@ -39,15 +41,20 @@
   "devDependencies": {
     "autoprefixer-loader": "*",
     "babel": "5.x",
-    "babel-core": "^6.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^5.4.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.1",
+    "chai-immutable": "^1.6.0",
     "css-loader": "^0.22.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.30.1",
+    "jsdom": "^11.2.0",
     "json-loader": "^0.5.4",
+    "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "node-static": "^0.7.9",
     "pug": "^2.0.0-rc.3",
