--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --debug --hot --devtool --output-pathinfo --watch --colors --host 0.0.0.0 --env development",
     "server": "babel-node server/app.js",
     "serv-static": "static public",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -44,11 +44,14 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^5.4.2",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.14.0",
     "chai": "^4.1.1",
     "chai-immutable": "^1.6.0",
     "css-loader": "^0.22.0",
+    "enzyme": "^2.9.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.30.1",
